Added DFS based evaluation of cells

--- a/index.html
+++ b/index.html
@@ -74,5 +74,6 @@
     <!-- script files -->
     <script src="./grid.js"></script>
     <script src="./cellProperties.js"></script>
+    <script src="./formula.js"></script>
   </body>
 </html>
