--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
     <!-- script files -->
     <script src="./grid.js"></script>
     <script src="./cellProperties.js"></script>
+    <script src="./cycleValidation.js"></script>
     <script src="./formula.js"></script>
   </body>
 </html>
