Added Multiple sheets feature

--- a/index.html
+++ b/index.html
@@ -63,18 +63,21 @@
         <div class="cells-container"></div>
     </div>
     <div class="sheet-actions-container">
-      <div class="sheet-add-icon">
+      <div class="sheet-add-icon" id="0">
         <span class="material-icons"> post_add </span>
       </div>
       <div class="sheets-folder-conatainer">
-        <div class="sheet-folder">sheet1</div>
+        <!-- <div class="sheet-folder">
+          <div class="sheet-content">Sheet-1</div>
+        </div> -->
       </div>
     </div>
 
     <!-- script files -->
     <script src="./grid.js"></script>
-    <script src="./cellProperties.js"></script>
     <script src="./cycleValidation.js"></script>
+    <script src="./sheetsHandling.js"></script>
+    <script src="./cellProperties.js"></script>
     <script src="./cyclicPathTrace.js"></script>
     <script src="./formula.js"></script>
   </body>
